--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -289,6 +289,15 @@
     "noPosition": "Don't See the Right Position?",
     "noPositionDesc": "We're always looking for talented sales professionals. Send us your application and we'll keep you in mind for future opportunities.",
     "submitGeneral": "Submit General Application",
+    "backToAll": "Back to All Positions",
+    "fullTime": "Full-time",
+    "applyForPosition": "Apply for This Position",
+    "responsibilities": "Main Responsibilities",
+    "whatWeOffer": "What We Offer",
+    "requirements": "What We Expect",
+    "readyToApply": "Ready to",
+    "apply": "Apply?",
+    "applyDescription": "Take the first step towards building your career with Win Win. Submit your application today and join our team of high-performing sales professionals.",
     "filters": {
       "all": "All Positions",
       "location": "Location",
