--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -289,6 +289,15 @@
     "noPosition": "Ne vidiš prave pozicije?",
     "noPositionDesc": "Vedno iščemo nadarjene prodajne strokovnjake. Pošlji nam svojo prijavo in te bomo imeli v mislih za prihodnje priložnosti.",
     "submitGeneral": "Oddaj splošno prijavo",
+    "backToAll": "Nazaj na vse pozicije",
+    "fullTime": "Polni delovni čas",
+    "applyForPosition": "Prijavi se za to pozicijo",
+    "responsibilities": "Glavne odgovornosti",
+    "whatWeOffer": "Kaj ponujamo",
+    "requirements": "Kaj pričakujemo",
+    "readyToApply": "Pripravljen za",
+    "apply": "prijavo?",
+    "applyDescription": "Naredi prvi korak k gradnji svoje kariere z Win Win. Oddaj svojo prijavo še danes in pridruži se naši ekipi visoko uspešnih prodajnih strokovnjakov.",
     "filters": {
       "all": "Vse pozicije",
       "location": "Lokacija",
