--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -343,7 +343,7 @@
       "email": "E-poštni naslov",
       "emailPlaceholder": "janez.novak@primer.si",
       "phone": "Telefonska številka",
-      "phonePlaceholder": "+386 XX XXX XXX",
+      "phonePlaceholder": "+386 31 234 567",
       "preferredTime": "Željen čas razgovora",
       "preferredTimePlaceholder": "npr. Dopoldne med tednom, Popoldne",
       "message": "Dodatno sporočilo",
