--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,7 @@
     "hero": {
       "title": "Build Your Career with Win Win",
       "subtitle": "Sales Team",
-      "description": "We are a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions across Slovenia.",
+      "description": "We are a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions",
       "joinTeam": "Join the Team",
       "viewPositions": "View Open Positions"
     },
