--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,7 @@
     "hero": {
       "title": "Build Your Career with Win Win",
       "subtitle": "Sales Team",
-      "description": "We are a performance-driven sales company specializing in B2C field sales, call center sales, and telecommunications solutions",
+      "description": "We are a results-driven sales company specialized in selling telecommunications solutions for B2C and B2B through field sales, call center, and direct promotions at strategic locations with higher commissions than other providers.",
       "joinTeam": "Join the Team",
       "viewPositions": "View Open Positions"
     },
