--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -12,7 +12,7 @@
     "hero": {
       "title": "Zgradi svojo kariero z Win Win",
       "subtitle": "Sales Team",
-      "description": "Smo prodajno podjetje, usmerjeno k doseganju rezultatov, ki se specializira za B2C prodajo na terenu, prodajo v klicnem centru in telekomunikacijske rešitve",
+      "description": "Smo prodajno podjetje, usmerjeno k doseganju rezultatov, ki je specializirano za prodajo telekomnikacijskih rešitev za b2c in b2b preko prodaje na terenu, klicnega centra in preko direktnih promocij na strateških lokacijah z višjimi provizijami kot ostali ponudniki.",
       "joinTeam": "Pridruži se ekipi",
       "viewPositions": "Poglej odprte pozicije"
     },
