--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -18,7 +18,7 @@
     },
     "about": {
       "title": "Kdo smo",
-      "description": "Win Win d.o.o. je ekipa izkušenih prodajnih strokovnjakov, ki se specializira za neposredno trženje in dolgoročne odnose s strankami. Delujemo z več lokacij po Sloveniji in gradimo okolje, kjer se nagrajujejo trud, disciplina in vztrajnost.",
+      "description": "Win Win d.o.o. je ekipa izkušenih prodajnih vodij in strokovnjakov, ki se specializira za neposredno trženje in dolgoročne odnose s strankami. Delujemo z več lokacij po Sloveniji in gradimo okolje, kjer se nagrajujejo strokovnost, trud, disciplina in vztrajnost.",
       "stats": {
         "clients": "Aktivnih strank",
         "team": "Članov ekipe",
