--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -20,9 +20,9 @@
       "title": "Kdo smo",
       "description": "Win Win d.o.o. je ekipa izkušenih prodajnih vodij in strokovnjakov, ki se specializira za neposredno trženje in dolgoročne odnose s strankami. Delujemo z več lokacij po Sloveniji in gradimo okolje, kjer se nagrajujejo strokovnost, trud, disciplina in vztrajnost.",
       "stats": {
-        "clients": "Aktivnih strank",
+        "deals": "Zaključenih poslov",
+        "locations": "Lokacije",
         "team": "Članov ekipe",
-        "locations": "Pisarne lokacij",
         "experience": "Let izkušenj"
       }
     },
