--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,7 @@
     "services": {
       "title": "Our Services",
       "description": "Comprehensive sales solutions and support systems that drive results",
-      "b2cField": "B2C Field",
+      "b2cField": "OUR SERVICES",
       "internalSupport": "Internal Support Services",
       "marketFocus": "Market Focus",
       "core": {
