--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -29,7 +29,7 @@
     "services": {
       "title": "Naše storitve",
       "description": "Celovite prodajne rešitve in podporni sistemi, ki prinašajo rezultate",
-      "b2cField": "B2C teren",
+      "b2cField": "NAŠE STORITVE",
       "internalSupport": "Interne podporne storitve",
       "marketFocus": "Tržna usmeritev",
       "core": {
