--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -34,8 +34,8 @@
       "marketFocus": "Tržna usmeritev",
       "core": {
         "promotions": {
-          "title": "Promocije v nakupovalnih centrih",
-          "description": "Promocijske aktivnosti na licu mesta in neposredno angažiranje strank v prometnih trgovskih lokacijah po Sloveniji."
+          "title": "B2C Terenska Prodaja",
+          "description": "Promocijske aktivnosti na licu mesta z neposrednim angažiranjem strank na prometnih trgovskih lokacijah po Sloveniji, podprte z vnaprej pripravljenim terenom ter ciljno usmerjenimi promocijami v trgovskih centrih, na sejmih in drugih aktualnih dogodkovnih lokacijah."
         },
         "callCenter": {
           "title": "Klicni center",
