--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -38,8 +38,8 @@
           "description": "Promocijske aktivnosti na licu mesta z neposrednim angažiranjem strank na prometnih trgovskih lokacijah po Sloveniji, podprte z vnaprej pripravljenim terenom ter ciljno usmerjenimi promocijami v trgovskih centrih, na sejmih in drugih aktualnih dogodkovnih lokacijah."
         },
         "callCenter": {
-          "title": "Klicni center",
-          "description": "Profesionalni odhodna telefonska prodaja s strukturiranimi skripti, KPI-usmerjeno uspešnostjo in CRM-osnovanim upravljanjem strank."
+          "title": "Klicni Center",
+          "description": "Profesionalna odhodna telefonska prodaja za generiranje vročih marketing leadov, podprta s strukturiranimi prodajnimi skriptami, KPI-usmerjeno uspešnostjo in CRM-osnovanim upravljanjem strank."
         },
         "b2b": {
           "title": "B2B Profesionalna prodaja",
