--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -42,8 +42,8 @@
           "description": "Profesionalna odhodna telefonska prodaja za generiranje vročih marketing leadov, podprta s strukturiranimi prodajnimi skriptami, KPI-usmerjeno uspešnostjo in CRM-osnovanim upravljanjem strank."
         },
         "b2b": {
-          "title": "B2B Profesionalna prodaja",
-          "description": "Prodajne rešitve med podjetji, korporativne telekomunikacije in ponudbe profesionalnih storitev."
+          "title": "B2B Profesionalna Prodaja",
+          "description": "Telekomunikacije in napredne IKT storitve, ki podjetjem omogočajo učinkovite in merljive B2B prodajne rešitve, zanesljive korporativne telekomunikacijske sisteme ter celovite profesionalne podporne in svetovalne storitve."
         }
       },
       "support": {
