--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -70,7 +70,7 @@
           "description": "Primarni fokus na stanovanjske stranke, gospodinjstva in posamezne končne uporabnike."
         },
         "b2b": {
-          "title": "B2B prodajna podpora",
+          "title": "B2B Prodaja",
           "description": "Sekundarni fokus na poslovne telekomunikacijske rešitve in ponudbe povezane z IKT."
         }
       }
