--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -273,7 +273,7 @@
       "stats": {
         "members": "Active Team Members",
         "field": "Field Sales",
-        "callCenter": "Call Center",
+        "callCenter": "Support",
         "locations": "Multiple Locations"
       },
       "fieldText": "Field",
