--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -273,7 +273,7 @@
       "stats": {
         "members": "Aktivnih članov ekipe",
         "field": "Terenska prodaja",
-        "callCenter": "Klicni center",
+        "callCenter": "Podpora",
         "locations": "Več lokacij"
       },
       "fieldText": "Teren",
