Add auto-deploy to GoDaddy via FTP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -149,7 +149,7 @@
       "comingSoon": "Coming Soon"
     },
     "faq": {
-      "title": "Frequently Asked <span class=\"text-red-500\">Questions</span>",
+      "title": "Frequently Asked Questions",
       "description": "Everything you need to know about joining Win Win",
       "stillQuestions": "Still have questions?",
       "getInTouch": "Get in Touch",
