--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -149,7 +149,7 @@
       "comingSoon": "Kmalu na voljo"
     },
     "faq": {
-      "title": "Pogosto zastavljena <span class=\"text-red-500\">vprašanja</span>",
+      "title": "Pogosto zastavljena vprašanja",
       "description": "Vse, kar moraš vedeti o pridružitvi Win Win",
       "stillQuestions": "Še vedno imaš vprašanja?",
       "getInTouch": "Kontaktiraj nas",
