--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -153,7 +153,7 @@
       "comingSoon": "Coming Soon"
     },
     "faq": {
-      "title": "Frequently Asked Questions",
+      "title": "Frequently Asked <span class=\"text-red-500\">Questions</span>",
       "description": "Everything you need to know about joining Win Win",
       "stillQuestions": "Still have questions?",
       "getInTouch": "Get in Touch",
