--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -298,6 +298,7 @@
     "backToAll": "Back to All Positions",
     "fullTime": "Full-time",
     "applyForPosition": "Apply for This Position",
+    "fullDescription": "Full Description",
     "responsibilities": "Main Responsibilities",
     "whatWeOffer": "What We Offer",
     "requirements": "What We Expect",
