--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -298,6 +298,7 @@
     "backToAll": "Nazaj na vse pozicije",
     "fullTime": "Polni delovni čas",
     "applyForPosition": "Prijavi se za to pozicijo",
+    "fullDescription": "Celoten opis",
     "responsibilities": "Glavne odgovornosti",
     "whatWeOffer": "Kaj ponujamo",
     "requirements": "Kaj pričakujemo",
