--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -299,9 +299,9 @@
     "fullTime": "Full-time",
     "applyForPosition": "Apply for This Position",
     "fullDescription": "Full Description",
-    "responsibilities": "Main Responsibilities",
-    "whatWeOffer": "What We Offer",
-    "requirements": "What We Expect",
+    "responsibilities": "Responsibilities",
+    "whatWeOffer": "Benefits",
+    "requirements": "Requirements",
     "readyToApply": "Ready to",
     "apply": "Apply?",
     "applyDescription": "Take the first step towards building your career with Win Win. Submit your application today and join our team of high-performing sales professionals.",
