--- a/src/locales/sl.json
+++ b/src/locales/sl.json
@@ -299,9 +299,9 @@
     "fullTime": "Polni delovni čas",
     "applyForPosition": "Prijavi se za to pozicijo",
     "fullDescription": "Celoten opis",
-    "responsibilities": "Glavne odgovornosti",
-    "whatWeOffer": "Kaj ponujamo",
-    "requirements": "Kaj pričakujemo",
+    "responsibilities": "Odgovornosti",
+    "whatWeOffer": "Benefiti",
+    "requirements": "Zahteve",
     "readyToApply": "Pripravljen za",
     "apply": "prijavo?",
     "applyDescription": "Naredi prvi korak k gradnji svoje kariere z Win Win. Oddaj svojo prijavo še danes in pridruži se naši ekipi visoko uspešnih prodajnih strokovnjakov.",
